# flutter_callkit_incoming

./: .metadata  README.md  pubspec.yaml
android/src/test/kotlin/com/hiennv/flutter_callkit_incoming/: FlutterCallkitIncomingPluginTest.kt
aurora/: CMakeLists.txt  aurora_params.cpp  call.cpp  call1dbusadaptor.cpp  call1dbusobject.cpp  callmanager.cpp  callmanagerdbusadaptor.cpp  callservice1dbusinterface.cpp  flutter_callkit_incoming_plugin.cpp  utils.cpp
aurora/include/flutter_callkit_incoming/: aurora_params.h  call1dbusadaptor.h  call1dbusobject.h  call_event.h  callmanager.h  callmanagerdbusadaptor.h  callservice1dbusinterface.h  dbustypes.h  flutter_callkit_incoming_plugin.h  globals.h  utils.h
example/: pubspec.yaml
example/android/app/src/main/kotlin/com/hiennv/flutter_callkit_incoming_example/: MainActivity.kt
example/aurora/: CMakeLists.txt  main.cpp
example/aurora/desktop/: com.hiennv.flutter_callkit_incoming_example.desktop
example/aurora/flutter/: generated_plugin_registrant.cpp  generated_plugins.cmake
example/aurora/rpm/: com.hiennv.flutter_callkit_incoming_example.spec
example/integration_test/: plugin_integration_test.dart
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: .gdbinit  active_call_screen.dart  call_event_manager.dart  contact.dart  home_page.dart  incoming_screen.dart  login_screen.dart  main.dart  main2.dart  navigation_service.dart
example/test/: widget_test.dart
ios/Classes/: FlutterCallkitIncomingPlugin.swift
lib/: flutter_callkit_incoming.dart  flutter_callkit_incoming_method_channel.dart  flutter_callkit_incoming_platform_interface.dart
lib/entities/: aurora_params.dart  aurora_params.g.dart  call_kit_params.dart  call_kit_params.g.dart  entities.dart
test/: flutter_callkit_incoming_method_channel_test.dart
